--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -11,10 +11,10 @@
     <h1>Flower Shop</h1>
     <h3>home</h3>
     <div class="cart">
-        <a href="index.html">home</a>
-        <a href="shop.html">shop</a>
-        <a href="custombouquet.html">custom bouquet</a>
-        <a href="cart.html"><img src="image\cart.webp" style="width:42px;height:42px;"></a>
+        <a href="..\FrontEnd\index.html">home</a>
+        <a href="..\FrontEnd\shop.html">shop</a>
+        <a href="..\FrontEnd\custombouquet.html">custom bouquet</a>
+        <a href="..\FrontEnd\cart.html"><img src="..\image\cart.webp" style="width:42px;height:42px;"></a>
     </div>
 </header>
 
