Back-End Complete | Create Tables Tweaked

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="/style.css">
 <title>Flower Shop</title>
 </head>
 <body>
@@ -10,15 +10,15 @@
     <h1>Flower Shop</h1>
     <h3>home</h3>
     <div class="cart">
-        <a href="..\FrontEnd\index.html">home</a>
-        <a href="..\FrontEnd\shop.html">shop</a>
-        <a href="..\FrontEnd\custombouquet.html">custom bouquet</a>
-        <a href="..\FrontEnd\cart.html"><img src="..\image\cart.webp" style="width:42px;height:42px;"></a>
+        <a href="/index.html">home</a>
+        <a href="/shop">shop</a>
+        <a href="custombouquet.html">custom bouquet</a>
+        <a href="/cart"><img src="\images\cart.webp" style="width:42px;height:42px;"></a>
     </div>
 </header>
 
 <main>
-    some content !
+    home page content !
 </main>
 
 <footer>
